[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "latexnav"
version = "0.1.0"
description = "LaTeX navigator and structure summariser for large manuscripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Peter Wood" },
]
keywords = ["latex", "navigation", "summariser", "theorem", "manuscript"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.scripts]
latexnav = "latexnav:main"

[project.urls]
Repository = "https://github.com/drwoood/latexnav"
